--- a/landing.html
+++ b/landing.html
@@ -151,15 +151,15 @@
 						<div class="contact-method">
 							<span class="icon solid alt fa-phone"></span>
 							<h3>Telefone</h3>
-							<span>(000) 123-4567</span>
+							<span>+ 55 (95) 99171-2353</span>
 						</div>
 					</section>
 					<section>
 						<div class="contact-method">
 							<span class="icon solid alt fa-home"></span>
 							<h3>Endereço</h3>
-							<span>1234 Algum Lugar<br />
-							São Paulo, SP 00000<br />
+							<span>Rua Beija Flor, n440<br />
+							Boa Vista, RR<br />
 							Brasil</span>
 						</div>
 					</section>
