--- a/index.html
+++ b/index.html
@@ -64,8 +64,44 @@
                     <img src="images/pic01.jpg" alt="" />
                 </span>
                 <header class="major">
-                    <h3><a href="landing.html" class="link">Projeto de Portfólio 1</a></h3>
-                    <p>Criando um site impressionante</p>
+                    <h3><a href="landing.html" class="link">Motivar - Frases Motivacionais</a></h3>
+                    <p>App de frases Motivacionais para Android</p>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic01.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="landing.html" class="link">App do Barbeiro</a></h3>
+                    <p>Um gestor de barbearia e um app para clientes em um único aplicativo, onde os cliente podem agendar seus cortes de cabelo.</p>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic01.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="landing.html" class="link">Chord Writer</a></h3>
+                    <p>App para músicos, onde ele pode escrever, salvar e editar cifras de músicas.</p>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic01.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="landing.html" class="link">Que Gosto</a></h3>
+                    <p>App de culinária, onde os usuários podem adicionar e compartilhar com outras pessoas suas receitas.</p>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic01.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="landing.html" class="link">Fatura Dividida</a></h3>
+                    <p>Aplicativo para grenciar as finanças em grupo ou familia.</p>
                 </header>
             </article>
             <!-- Adicione mais artigos com detalhes sobre seus projetos -->
