--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>Olá, me chamo Jesiel Gomes</h1>
+                <h1>Jesiel Gomes | Frontend Developer</h1>
             </header>
             <div class="content">
                 <p>Um desenvolvedor frontend apaixonado criando sites responsivos e amigáveis ao usuário.</p>
