--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section id="one" class="tiles">
             <article>
                 <span class="image">
-                    <img src="images/pic01.jpg" alt="" />
+                    <img src="images/motivar-mockup.png" alt="" />
                 </span>
                 <header class="major">
                     <h3><a href="landing.html" class="link">Motivar - Frases Motivacionais</a></h3>
@@ -77,7 +77,7 @@
             </article>
             <article>
                 <span class="image">
-                    <img src="images/pic01.jpg" alt="" />
+                    <img src="images/barber-app.png" alt="" />
                 </span>
                 <header class="major">
                     <h3><a href="landing.html" class="link">App do Barbeiro</a></h3>
@@ -86,7 +86,7 @@
             </article>
             <article>
                 <span class="image">
-                    <img src="images/pic01.jpg" alt="" />
+                    <img src="images/chord-writer-app1.png" alt="" />
                 </span>
                 <header class="major">
                     <h3><a href="landing.html" class="link">Chord Writer</a></h3>
@@ -95,7 +95,7 @@
             </article>
             <article>
                 <span class="image">
-                    <img src="images/pic01.jpg" alt="" />
+                    <img src="images/que-gosto-mockup.png" alt="" />
                 </span>
                 <header class="major">
                     <h3><a href="landing.html" class="link">Que Gosto</a></h3>
