--- a/index.html
+++ b/index.html
@@ -77,28 +77,29 @@
             </article>
             <article>
                 <span class="image">
-                    <img src="images/barber-app.png" alt="" />
-                </span>
-                <header class="major">
-                    <h3><a href="landing.html" class="link">App do Barbeiro</a></h3>
-                    <p>Um gestor de barbearia e um app para clientes em um único aplicativo, onde os cliente podem agendar seus cortes de cabelo.</p>
-                </header>
-            </article>
-            <article>
-                <span class="image">
                     <img src="images/chord-writer-mockup.png" alt="" />
                 </span>
                 <header class="major">
-                    <h3><a href="landing.html" class="link">Chord Writer</a></h3>
+                    <h3><a href="landing2.html" class="link">Chord Writer</a></h3>
                     <p>App para músicos, onde ele pode escrever, salvar e editar cifras de músicas.</p>
                 </header>
             </article>
             <article>
                 <span class="image">
+                    <img src="images/barber-app.png" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="landing3.html" class="link">App do Barbeiro</a></h3>
+                    <p>Um gestor de barbearia e um app para clientes em um único aplicativo, onde os cliente podem agendar seus cortes de cabelo.</p>
+                </header>
+            </article>
+       
+            <article>
+                <span class="image">
                     <img src="images/que-gosto-mockup.png" alt="" />
                 </span>
                 <header class="major">
-                    <h3><a href="landing.html" class="link">Que Gosto</a></h3>
+                    <h3><a href="landing4.html" class="link">Que Gosto</a></h3>
                     <p>App de culinária, onde os usuários podem adicionar e compartilhar com outras pessoas suas receitas.</p>
                 </header>
             </article>
