--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
 -->
 <html lang="pt-br">
   <head>
-    <title>Motivar - Frases Motivacionais</title>
+    <title>Motivar - Projetos</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -48,15 +48,15 @@
       <section id="banner" class="style2">
         <div class="inner">
           <span class="image">
-            <img src="images/project_image.jpg" alt="Imagem do Projeto" />
+            <img src="images/motivar-mockup.png" alt="Imagem do Projeto" />
           </span>
           <header class="major">
             <h1>Motivar - Frases Motivacionais</h1>
           </header>
           <div class="content">
             <p>
-              Um aplicativo móvel incrível criado por Jesiel Gomes, utilizando
-              React Native e uma API RESTful. Disponível na Play Store.
+              Um aplicativo mobile incrível criado por Jesiel Gomes, utilizando
+              React Native e API RESTful. Disponível na <a target="_blank" href="https://play.google.com/store/apps/details?id=com.jesiel364.motivarapp">Play Store.</a>
             </p>
           </div>
         </div>
@@ -120,8 +120,8 @@
                   <div class="col-6 col-12-small">
                     <h4>Funcionalidades</h4>
                     <ul>
-                      <li>Salvar nos favoritos</li>
-                      <li>Compartilhar com outras pessoas</li>
+                      <li>Salvar nos favoritos.</li>
+                      <li>Compartilhar com outras pessoas.</li>
                       <li>Selecionar autor.</li>
                       <li>Dark Mode.</li>
                     </ul>
@@ -129,7 +129,7 @@
                 </div>
 
                 <ul class="actions">
-                  <li><a href="#" class="button">Visualizar</a></li>
+                  <li><a target="_blank" href="https://motivar.jesielgomes.com/" class="button">Visualizar</a></li>
                 </ul>
               </div>
             </div>
@@ -153,15 +153,14 @@
                 usuário.
               </li>
               <li>
-                Otimização de desempenho para garantir tempos de carregamento
-                rápidos.
+                Implementar barra de pesquisa
               </li>
               <li>
-                Integração com APIs externas para funcionalidades avançadas.
+                Integrar com Firebase, para funcionalidades de login
               </li>
             </ul>
             <ul class="actions">
-              <li><a href="generic.html" class="button next">Saiba Mais</a></li>
+              <li><a target="_blank" href="https://motivar.jesielgomes.com" class="button next">Saiba Mais</a></li>
             </ul>
           </div>
         </section>
@@ -203,7 +202,7 @@
               <div class="contact-method">
                 <span class="icon solid alt fa-envelope"></span>
                 <h3>Email</h3>
-                <a href="#">contato@jesielgomes.com</a>
+                <a href="">jesiel364@gmail.com</a>
               </div>
             </section>
             <section>
