feat: add link of chord-writter app

--- a/landing2.html
+++ b/landing2.html
@@ -128,7 +128,7 @@
                 </div>
 
                 <ul class="actions">
-                  <li><a target="_blank" href="#" class="button">Visualizar</a></li>
+                  <li><a target="_blank" href="https://chordwritter.jesielgomes.com" class="button">Visualizar</a></li>
                 </ul>
               </div>
             </div>
@@ -162,7 +162,7 @@
               </li>
             </ul>
             <ul class="actions">
-              <li><a target="_blank" href="https://motivar.jesielgomes.com" class="button next">Saiba Mais</a></li>
+              <li><a target="_blank" href="https://chordwritter.jesielgomes.com" class="button next">Saiba Mais</a></li>
             </ul>
           </div>
         </section>
